chore: 提交工作树现有改动并推送
批量 push 收口；未逐项验证构建/测试，凭证字节级扫描 0 命中。